# ARFF

./: .gitignore  CMakeLists.txt
src/: arff_data.cpp  arff_lexer.cpp  arff_lexer.h  arff_parser.cpp  arff_value.cpp
tests/: CMakeLists.txt
